- Fixed bug #55326 (Trait method copying misindentifies serialization callbacks)   patch by: Gustavo Lopes (cataphract@php)